# bughunter

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  debug_json.py  main.py  pyproject.toml  requirements.txt  tensorrt_traffic.json  test_analysis.py  test_llm.py  test_traffic.json  traffic.json  vulnerable_server.py
.github/workflows/: ci.yml
agents/analysis/: __init__.py  analyzer.py
agents/fuzz/: __init__.py  fuzz.py
agents/report/: __init__.py  generator.py
agents/request_builder/: __init__.py  builder.py
agents/response/: __init__.py  analyzer.py  llm_analyzer.py
agents/stateful/: __init__.py  comparator.py  cross_user.py  flow_engine.py  idor_detector.py  login.py  safe_exec.py  session_manager.py
agents/strategy/: __init__.py  strategy.py
config/: __init__.py  settings.json
core/: burp.py  cache.py  cli.py  decision.py  diff.py  live_attack.py  live_listener.py  llm.py  logger.py  orchestrator.py  parser.py  queue.py  scorer.py  validator.py
docs/: TENSORRT_TESTING.md
tests/: __init__.py  test_fuzz.py  test_parser.py  test_scorer.py
