[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bughunter"
version = "1.0.0"
description = "AI-Assisted Security Testing Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adarsh", email = "adarsh@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["security", "bug-bounty", "idor", "vulnerability", "testing", "burp"]

dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-urllib3>=1.26.0",
]

[project.scripts]
bughunter = "main:main"

[project.urls]
Homepage = "https://github.com/Adarsh1Y/bughunter"
Repository = "https://github.com/Adarsh1Y/bughunter"
Documentation = "https://github.com/Adarsh1Y/bughunter#readme"
Issues = "https://github.com/Adarsh1Y/bughunter/issues"
Changelog = "https://github.com/Adarsh1Y/bughunter/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agents*", "config*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
